--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
+# secrets
+credentials.json
+token.json
+client_secret.json
+gmail_token.json
+*.secret
+*.pickle
+
+# VS code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Random
+.DS_Store
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
